--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -1,7 +1,7 @@
 /*Home*/
 @import url('https://fonts.googleapis.com/css?family=Cormorant+Unicase:300,400,500,600,700');
 .home {
-  height: 1700px;
+  min-height: 1700px;
   background-color: black;
   .menuIcon {
     z-index: 10;
