--- a/src/components/Home/Tabs/HomePage.scss
+++ b/src/components/Home/Tabs/HomePage.scss
@@ -3,12 +3,15 @@
   .contentTitle {
     z-index: 9;
     position: absolute;
-    right: 100px;
-    bottom: 50px;
+    bottom: 0;
+    right: 0;
     color: white;
     background-color: black;
     .items {
+      height: 825px;
       display: flex;
+      flex-direction: column;
+      justify-content: flex-end;
       .item {
         padding: 50px;
       }
@@ -22,98 +25,27 @@
     }
   }
   .contentDesc {
-    color: white;
-    z-index: 9;
-    bottom: 500px;
-    left: 100px;
     position: fixed;
     display: flex;
-    flex-direction: column;
-    .title {
-      width: 200px;
-      margin: 5px;
-      padding: 50px;
-      background: linear-gradient(-45deg, #282A37, #393D51, #000c1e, black);
-      background-size: 400% 400%;
-      -webkit-animation: Gradient 15s ease infinite;
-      -moz-animation: Gradient 15s ease infinite;
-      animation: Gradient 15s ease infinite;
-      @-webkit-keyframes Gradient {
-        0% {
-          background-position: 0 50%;
-        }
-        50% {
-          background-position: 100% 50%;
-        }
-        100% {
-          background-position: 0 50%;
-        }
-      }
-      @-moz-keyframes Gradient {
-        0% {
-          background-position: 0 50%;
-        }
-        50% {
-          background-position: 100% 50%;
-        }
-        100% {
-          background-position: 0 50%;
-        }
-      }
-      @keyframes Gradient {
-        0% {
-          background-position: 0 50%;
-        }
-        50% {
-          background-position: 100% 50%
-        }
-        100% {
-          background-position: 0 50%
-        }
-      }
-    }
-    .desc {
-      color: white;
+    justify-content: center;
+    align-items: center;
+    height: 10%;
+    width: 20%;
+    bottom: 0;
+    background-color: black;
+    border-bottom: 5px solid white;
+    .timeBlock {
       display: flex;
-      width: 400px;
-      margin: 5px;
-      padding: 25px;
-      background: linear-gradient(-45deg, #282A37, #393D51, #000c1e, black);
-      background-size: 400% 400%;
-      -webkit-animation: Gradient 15s ease infinite;
-      -moz-animation: Gradient 15s ease infinite;
-      animation: Gradient 15s ease infinite;
-      @-webkit-keyframes Gradient {
-        0% {
-          background-position: 0% 50%
-        }
-        50% {
-          background-position: 100% 50%
-        }
-        100% {
-          background-position: 0% 50%
-        }
+      flex-direction: row;
+      align-items: center;
+      .clock {
+        font-size: 46px;
       }
-      @-moz-keyframes Gradient {
-        0% {
-          background-position: 0% 50%
-        }
-        50% {
-          background-position: 100% 50%
-        }
-        100% {
-          background-position: 0% 50%
-        }
-      }
-      @keyframes Gradient {
-        0% {
-          background-position: 0% 50%
-        }
-        50% {
-          background-position: 100% 50%
-        }
-        100% {
-          background-position: 0% 50%
+      .month {
+        display: flex;
+        flex-direction: column;
+        span {
+          font-size: 22px;
         }
       }
     }
@@ -121,44 +53,6 @@
   .scrollContent {
     transition: 2s;
     color: white;
-    background: linear-gradient(-45deg, #282A37, #393D51, #000c1e, black);
-    background-size: 400% 400%;
-    -webkit-animation: Gradient 15s ease infinite;
-    -moz-animation: Gradient 15s ease infinite;
-    animation: Gradient 15s ease infinite;
-    @-webkit-keyframes Gradient {
-      0% {
-        background-position: 0% 50%
-      }
-      50% {
-        background-position: 100% 50%
-      }
-      100% {
-        background-position: 0% 50%
-      }
-    }
-    @-moz-keyframes Gradient {
-      0% {
-        background-position: 0% 50%
-      }
-      50% {
-        background-position: 100% 50%
-      }
-      100% {
-        background-position: 0% 50%
-      }
-    }
-    @keyframes Gradient {
-      0% {
-        background-position: 0% 50%
-      }
-      50% {
-        background-position: 100% 50%
-      }
-      100% {
-        background-position: 0% 50%
-      }
-    }
   }
   .homePageContent {
     color: white;
