--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -17,7 +17,7 @@
 
 
     z-index: 9;
-    position: absolute;
+    position: fixed;
     width: 100%;
     height: 100%;
     background: #FD630B;
@@ -89,6 +89,27 @@
 }
 @media screen and (max-width: 1000px) {
   .home {
+
+  }
+}
+@media screen and (max-width: 550px) {
+  .home {
+    .ui.secondary.pointing.menu {
+      a.item {
+        font-family: 'Cormorant Unicase', serif;
+        font-size: 14px;
+        color: white;
+        margin: 1px;
+
+      }
+    }
+  }
+
+  .menuIcon {
+
+
+  }
+  .menuBlock {
 
   }
 }
