--- a/src/components/Home/Tabs/AboutPage.scss
+++ b/src/components/Home/Tabs/AboutPage.scss
@@ -1,4 +1,89 @@
 /**/
+$transition: .6s;
+$font-size: 5vw;
+$font-color: #ffffff;
+$background: #39393B;
+.HeaderAboutBlock {
+  .MainContainer {
+    color: $font-color;
+    .FirstContainer, .SecondContainer {
+      cursor: pointer;
+      position: relative;
+      h1 {
+        position: relative;
+        letter-spacing: 2px;
+        font-size: $font-size;
+        span {
+          display: inline-block;
+          position: relative;
+          margin-right: 5px;
+          &:after {
+            content: '';
+            position: absolute;
+            height: 100%;
+            width: 0;
+            top: 0;
+            left: 0;
+            transition: $transition;
+            z-index: -5;
+          }
+        }
+      }
+    }
+    @for $i from 1 through 10 {
+      .share:hover > h1 > span:nth-child(#{$i}) {
+        $delay: 100 * $i;
+        $random: ($i * 3) - 5;
+        background-color: white;
+        transition: $transition;
+        transition-delay: $delay + ms;
+        transform: rotate($random + deg);
+        text-shadow: 4px 4px 2px rgba(150, 150, 150, 1);
+      }
+      .share:hover > h1 > span:nth-child(#{$i}) {
+        $delayTwo: 110 * $i;
+        color: $background;
+        transition-delay: $delayTwo + ms;
+      }
+    }
+  }
+}
 .AboutPage {
   background-color: transparent;
+  .SocialBlock {
+    .grid {
+      .item {
+        height: 50px;
+        width: 50px;
+        background-color: #FD630B;
+        border-radius: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        margin: 10px;
+      }
+    }
+
+  }
+  .TextInfoBlock {
+    p {
+      width: 50%;
+    }
+  }
+  .FormBlock {
+    .grid {
+      .form {
+        width: 50%;
+        .field,fields {
+          label {
+            color: #FD630B;
+          }
+        }
+      }
+    }
+  }
+}
+.AboutPage>* {
+  margin: 100px 0 100px 0;
 }
