--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -10,12 +10,10 @@
     right: 0;
     height: 45px;
     width: 45px;
-    margin: 10px;
+    margin: 10px 50px;
     cursor: pointer;
   }
   .menuBlock {
-
-
     z-index: 9;
     position: fixed;
     width: 100%;
@@ -94,6 +92,10 @@
 }
 @media screen and (max-width: 550px) {
   .home {
+    .menuIcon {
+      height: 25px;
+      width: 25px;
+    }
     .ui.secondary.pointing.menu {
       a.item {
         font-family: 'Cormorant Unicase', serif;
