--- a/src/components/Home/Tabs/HomePage.scss
+++ b/src/components/Home/Tabs/HomePage.scss
@@ -21,7 +21,6 @@
         transition: 0.9s;
         opacity: 1;
       }
-
     }
   }
   .contentDesc {
@@ -38,6 +37,7 @@
       display: flex;
       flex-direction: row;
       align-items: center;
+      justify-content: center;
       .clock {
         font-size: 46px;
       }
@@ -45,6 +45,7 @@
         display: flex;
         flex-direction: column;
         span {
+          height: 22px;
           font-size: 22px;
         }
       }
@@ -79,13 +80,10 @@
     height: 800px;
 
     .parallaxContent {
-
       position: absolute;
       display: flex;
       justify-content: center;
-
       .custom-bg {
-
 
       }
     }
@@ -102,9 +100,7 @@
       justify-content: flex-end;
       align-items: flex-end;
     }
-
   }
-
 
   .react-parallax.parallax {
     &:hover {
@@ -125,6 +121,13 @@
     }
   }
 }
+@media screen and (max-width: 850px) {
+  .HomePage {
+    .contentDesc {
+      width: auto;
+    }
+  }
+}
 @media screen and (max-width: 550px) {
   .HomePage {
     .contentTitle {
@@ -135,6 +138,9 @@
           padding: 10px;
         }
       }
+    }
+    .contentDesc {
+
     }
   }
 }
