--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -1,5 +1,6 @@
 /*Home*/
 @import url('https://fonts.googleapis.com/css?family=Cormorant+Unicase:300,400,500,600,700');
+@import url('https://fonts.googleapis.com/css?family=Roboto:400,500,700');
 .home {
   font-family: 'Cormorant Unicase', serif;
   min-height: 1700px;
