add fetch add valid check form mail add preloader on form

--- a/src/components/Home/Tabs/AboutPage.scss
+++ b/src/components/Home/Tabs/AboutPage.scss
@@ -84,6 +84,9 @@ $background: #39393B;
   .FormBlock {
     .grid {
       .form {
+        .responseForm {
+          color: green;
+        }
         width: 50%;
         .field,fields {
           label {
