--- a/src/components/Home/Tabs/HomePage.scss
+++ b/src/components/Home/Tabs/HomePage.scss
@@ -117,7 +117,7 @@
       &:hover {
         transition: 0.9s;
         opacity: 0.95;
-        clip-path: polygon(50% 20%, 100% 0, 100% 100%, 50% 80%, 0 100%, 0 0);
+        clip-path: polygon(50% 20%, 100% 10%, 100% 100%, 50% 90%, 0 100%, 0% 60%, 0 10%);
       }
     }
   }
