--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -5,16 +5,6 @@
   font-family: 'Cormorant Unicase', serif;
   min-height: 1700px;
   background-color: black;
-  .menuIcon {
-    z-index: 10;
-    color: white;
-    position: absolute;
-    right: 0;
-    height: 45px;
-    width: 45px;
-    margin: 10px 50px;
-    cursor: pointer;
-  }
   .menuBlock {
     z-index: 9;
     position: fixed;
@@ -54,6 +44,16 @@
     justify-content: center;
     border-bottom: none;
     margin: 0;
+    .menuIcon {
+      position: fixed;
+      margin: 0 25px;
+      z-index: 10;
+      color: white;
+      right: 0;
+      height: 45px;
+      width: 45px;
+      cursor: pointer;
+    }
     a.item.active {
       color: #FD630B;
       border-color: #FD630B;
@@ -63,7 +63,6 @@
       font-size: 26px;
       color: white;
       margin: 1px;
-
     }
     a.item:hover {
       color: #FD630B;
@@ -87,11 +86,11 @@
 }
 @media screen and (max-width: 550px) {
   .home {
-    .menuIcon {
-      height: 25px;
-      width: 25px;
-    }
     .ui.secondary.pointing.menu {
+      .menuIcon {
+        height: 25px;
+        width: 25px;
+      }
       a.item {
         font-family: 'Cormorant Unicase', serif;
         font-size: 14px;
