--- a/src/components/Home/Tabs/AboutPage.scss
+++ b/src/components/Home/Tabs/AboutPage.scss
@@ -77,18 +77,18 @@ $background: #39393B;
       width: 300px;
       border: none;
       border-radius: 0;
-      border-bottom: 2px solid #FD630B;
+      border-bottom: 2px solid #1180fc;
       background-color: transparent;
       outline: none;
-      color: #FD630B;
+      color: #1180fc;
       font-size: 24px;
     }
     input:focus {
       opacity: 1;
       border: none;
       border-radius: 0;
-      border-bottom: 2px solid #FD630B;
-      color: #FD630B;
+      border-bottom: 2px solid #1180fc;
+      color: #1180fc;
       font-size: 24px;
       background-color: transparent;
       outline: none;
@@ -99,7 +99,7 @@ $background: #39393B;
 
     button {
       height: 100%;
-      background-color: #FD630B;
+      background-color: #1180fc;
       border-radius: 5px 5px 5px 0;
     }
     button:hover {
@@ -118,7 +118,7 @@ $background: #39393B;
         cursor: pointer;
         height: 50px;
         width: 50px;
-        background-color: #FD630B;
+        background-color: #1180fc;
         border-radius: 50%;
         display: flex;
         justify-content: center;
@@ -133,7 +133,7 @@ $background: #39393B;
         transition: .4s ease-in-out;
         background-color: white;
         svg {
-          color: #FD630B;
+          color: #1180fc;
         }
       }
     }
@@ -151,7 +151,7 @@ $background: #39393B;
         .field,fields {
           label {
             font-size: 18px;
-            color: #FD630B;
+            color: #1180fc;
           }
           textarea {
             color: white;
@@ -162,10 +162,11 @@ $background: #39393B;
           textarea:focus {
             cursor: pointer;
             border-radius: 0;
-            border-bottom: 1px solid #FD630B;
+            border-bottom: 1px solid #1180fc;
           }
           .input {
             input {
+              color: #1180fc;
               border: none;
               outline: none;
               background-color: transparent;
@@ -176,7 +177,7 @@ $background: #39393B;
               border: none;
               outline: none;
               border-radius: 0;
-              border-bottom: 1px solid #FD630B;
+              border-bottom: 1px solid #1180fc;
               background-color: transparent;
             }
           }
@@ -186,7 +187,7 @@ $background: #39393B;
         display: flex;
         justify-content: flex-end;
         button {
-          background-color: #FD630B;
+          background-color: #1180fc;
         }
       }
     }
