--- a/src/components/Home/Tabs/DemoPage.scss
+++ b/src/components/Home/Tabs/DemoPage.scss
@@ -293,6 +293,13 @@
     right: 0;
   }
   .demoPage {
+    .categoryButtons {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+      button {
+      }
+    }
     .items {
       .item {
         width: 100%;
